--- a/tests/timer/Makefile
+++ b/tests/timer/Makefile
@@ -1,10 +1,10 @@
 CC=gcc
 CFLAGS=-Wall -I. -std=gnu99
-LDFLAGS=-lpthread
+LDFLAGS=-lextc
 
 
 all:
-	$(CC) main.c -lextc -o test $(LDFLAGS)
+	$(CC) main.c -lextc -o test $(CFLAGS) $(LDFLAGS)
 
 clean:
 	rm test
